# small_program

./: .clang-format  .gitignore  README.md
barectf-test/: CMakeLists.txt  barectf-platform-linux-fs.cpp  barectf-platform-linux-fs.h  barectf_function_instrument.h  barectf_utils.cpp  barectf_utils.h  config.yml  create_and_build_trace.sh  main.cpp
barectf-test/barectf_generated_src/: barectf-bitfield.h  barectf.c  barectf.h  config_kernel.yml  config_user.yml
barectf-test/configs/: config.yml  env_kernel.yml  env_user.yml
barectf-test/generate_trace_metadata/: metadata
barectf-test/generated_kernel_trace_metadata/: metadata
barectf-test/generated_user_trace_metadata/: metadata
barectf_lttng_lib/: CMakeLists.txt  README.md  barectf-platform-linux-fs.cpp  barectf-platform-linux-fs.h  build_barectf.sh  main.cpp  setup.sh
barectf_lttng_lib/freertos_platform/: CMakeLists.txt  barectf_function_instrument.cpp  barectf_function_instrument.h  barectf_platform.cpp  barectf_platform.h  barectf_utils.cpp  barectf_utils.h  freertos_utils.h  trace_hook.cpp  trace_hook.h
barectf_lttng_lib/freertos_platform_test/: CMakeLists.txt  FreeRTOSConfig.h  README.md  main.cpp  run_infinite_test.sh  run_test.sh
barectf_lttng_lib/freertos_platform_test/archive/: main.c
barectf_lttng_lib/lib/: CMakeLists.txt  barectf-platform-linux-fs.cpp  barectf_function_instrument.cpp  build_barectf.sh
barectf_lttng_lib/lib/barectf_configs/: config.yml
barectf_lttng_lib/linux_platform/: CMakeLists.txt  barectf_function_instrument.h  barectf_platform.cpp  barectf_utils.h
barectf_lttng_lib/linux_platform_test/: CMakeLists.txt  run_test.sh  test_main.cpp
barectf_lttng_lib/lttng_freertos_platform_test/: .gitignore  CMakeLists.txt  README.md
barectf_lttng_lib/lttng_freertos_platform_test/archive/: main.c
barectf_lttng_lib/trace_splitter/: CMakeLists.txt  run_test.sh  trace_splitter.cpp  trace_splitter.h  trace_splitter_test_main.cpp
barectf_lttng_lib/trace_splitter_test/: .gitignore  CMakeLists.txt  run_test.sh  trace_splitter_test_main.cpp
bcc_compile/: README.md  build.sh  toolchain.cmake
freertos/: README.md
freertos/freertos_linux_lib/: CMakeLists.txt
freertos_sim/: README.md  build.sh  run_test.sh
freertos_sim/barectf_generated_src/: barectf-bitfield.h  barectf.c  barectf.h  config_user.yml
freertos_sim/freertos_linux_lib/: CMakeLists.txt
freertos_sim/generated_kernel_trace_metadata/: metadata
freertos_sim/generated_user_trace_metadata/: metadata
freertos_sim/lttng_freertos_platform_test/: CMakeLists.txt  console.h  main.cpp  run_test.sh
freertos_sim/src/: CMakeLists.txt  FreeRTOSConfig.h  README.md  main.cpp  trace_hook.cpp  trace_hook.h  trace_hook_macros.h
freertos_sim/src/archive/: main_full.c
freertos_sim/src/freertos_linux_lib/: CMakeLists.txt  FreeRTOSConfig.h
license_calculator/: CMakeLists.txt  README.md  main.cpp
license_calculator/license_calculator/: CMakeLists.txt
license_calculator/license_calculator/include/: license_calculator.hpp
lttng_tracing/: .gitignore  trace.sh
lttng_tracing/test_cpp_app/: CMakeLists.txt  build.sh  main.cpp
open_xilinx_serial/: open_xilinx_serial.bat  open_xilinx_serial.py
perf_flame_graph/: .gitignore  README.md  run_perf.sh
qemu_custom_kernel/: .gitignore  README.md  build_all.sh  build_clean_all.sh  common.sh  run_qemu.sh  save_buildroot_defconfig.sh  save_kernel_defconfig.sh  show_buildroot_xconfig.sh  show_kernel_xconfig.sh  ssh_to_qemu.sh  vscode_to_qemu.sh
qemu_custom_kernel/buildroot-2021.08.1/docs/manual/: manual.html  manual.text
qemu_custom_kernel/buildroot-2021.08.1/package/lttng-modules/: lttng-modules.hash  lttng-modules.mk
qemu_custom_kernel/buildroot_overlay/etc/network/: interfaces
qemu_custom_kernel/buildroot_overlay/etc/ssh/: sshd_config
qemu_custom_kernel/buildroot_overlay/etc/systemd/system/: startup.service
qemu_custom_kernel/configs/: buildroot_x86_64_defconfig  kernel_x86_64_defconfig
r5_asm/: README.md  build.sh  main.cpp
r5_bsp_build/: CMakeLists.txt  README.md  build_bsp.tcl  r5_toolchain.cmake
r5_qemu/: .gdbinit  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  build.tcl  build_bsp.tcl  build_clean.sh  generate_change_list.sh  lscript.ld  r5_qemu_gdb.sh  r5_toolchain.cmake  run_r5_qemu.sh  setup.sh  show_r5_bsp_in_vitis.sh  toolchain.cmake
r5_qemu/my_vitis_repo/bsp/my_freertos10_xilinx_v1_6/src/: FreeRTOSSTMTrace.h
r5_qemu/my_vitis_repo/sw_servcices/my_lwip211/data/: my_lwip211.mld
r5_qemu/qemu-devicetrees-xilinx-v2020.1/: versal-pmc-npi-nxx.dtsi
r5_qemu/src/: main.cpp
r5_qemu/src/openamp/: platform_info.c
r5_qemu/test_lib/: lib_src.cpp  lib_src.h
register_printer/: README.md  register-printer.py
yocto_crop_test/: .gitignore  Dockerfile  README.md  Vagrantfile  podman.dockerfile  run.sh  run_docker.sh  run_podman.sh  run_vagrant.sh  run_vagrant_with_vitis.sh  run_vagrant_without_vitis.sh  test_docker.sh  test_podman.sh
yocto_crop_test/scripts/: build_oob_yocto.sh  build_yocto.sh
